k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hetudit-api
spec:
  type: ClusterIP
  selector:
    ray.io/cluster: hetudit
    ray.io/node-type: head
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
